--- a/app/src/main/res/layout/fragment_bbs_daftarpesanan.xml
+++ b/app/src/main/res/layout/fragment_bbs_daftarpesanan.xml
@@ -1,62 +1,70 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:font="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical"
+
+<android.support.v4.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/swipe_refresh_layout"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    xmlns:font="http://schemas.android.com/apk/res-auto"    >
 
-    <RelativeLayout
-        android:id="@+id/layout_spinner_category"
-        android:background="@color/grey_ss"
-        android:layout_width="match_parent"
-        android:layout_margin="@dimen/space_5"
-        android:layout_height="@dimen/space_40">
-
-        <RelativeLayout
-
-            android:background="@color/grey_ss"
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/space_30"
-            android:layout_marginTop="@dimen/space_5"
-            android:layout_marginBottom="@dimen/space_5">
-
-            <Spinner
-                android:id="@+id/spinner_caetogory"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                />
-        </RelativeLayout>
-
-
-    </RelativeLayout>
-
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/my_recycler_view"
-        android:visibility="visible"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"></android.support.v7.widget.RecyclerView>
-
-    <RelativeLayout
-        android:visibility="gone"
-        android:id="@+id/layout_download"
+    <LinearLayout
+        android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/imageView9"
-            android:src="@drawable/pdf"
-            android:layout_centerVertical="true"
-            android:layout_centerHorizontal="true" />
-
-        <com.ayz4sci.androidfactory.DownloadProgressView
-            android:layout_below="@+id/imageView9"
-            android:id="@+id/downloadProgressView"
+        <RelativeLayout
+            android:id="@+id/layout_spinner_category"
+            android:background="@color/grey_ss"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="10dp"
-            android:layout_marginTop="10dp"
-            android:orientation="horizontal" />
-    </RelativeLayout>
-</LinearLayout>
+            android:layout_margin="@dimen/space_5"
+            android:layout_height="@dimen/space_40">
+
+            <RelativeLayout
+
+                android:background="@color/grey_ss"
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/space_30"
+                android:layout_marginTop="@dimen/space_5"
+                android:layout_marginBottom="@dimen/space_5">
+
+                <Spinner
+                    android:id="@+id/spinner_caetogory"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    />
+            </RelativeLayout>
+
+
+        </RelativeLayout>
+
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/my_recycler_view"
+            android:visibility="visible"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"></android.support.v7.widget.RecyclerView>
+
+        <RelativeLayout
+            android:visibility="gone"
+            android:id="@+id/layout_download"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/imageView9"
+                android:src="@drawable/pdf"
+                android:layout_centerVertical="true"
+                android:layout_centerHorizontal="true" />
+
+            <com.ayz4sci.androidfactory.DownloadProgressView
+                android:layout_below="@+id/imageView9"
+                android:id="@+id/downloadProgressView"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="10dp"
+                android:layout_marginTop="10dp"
+                android:orientation="horizontal" />
+        </RelativeLayout>
+    </LinearLayout>
+
+</android.support.v4.widget.SwipeRefreshLayout>
