--- a/app/src/main/res/layout/fragment_bbs_semuapesanan.xml
+++ b/app/src/main/res/layout/fragment_bbs_semuapesanan.xml
@@ -1,35 +1,42 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+<android.support.v4.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/swipe_refresh_layout"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    xmlns:font="http://schemas.android.com/apk/res-auto"    >
 
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/my_recycler_view"
-        android:visibility="visible"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"></android.support.v7.widget.RecyclerView>
-
-    <RelativeLayout
-        android:visibility="gone"
-        android:id="@+id/layout_download"
-        android:layout_width="match_parent"
+    <LinearLayout
+        android:orientation="vertical" android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/imageView9"
-            android:src="@drawable/pdf"
-            android:layout_centerVertical="true"
-            android:layout_centerHorizontal="true" />
-
-        <com.ayz4sci.androidfactory.DownloadProgressView
-            android:layout_below="@+id/imageView9"
-            android:id="@+id/downloadProgressView"
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/my_recycler_view"
+            android:visibility="visible"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="10dp"
-            android:layout_marginTop="10dp"
-            android:orientation="horizontal" />
-    </RelativeLayout>
-</LinearLayout>
+            android:layout_height="match_parent"></android.support.v7.widget.RecyclerView>
+
+        <RelativeLayout
+            android:visibility="gone"
+            android:id="@+id/layout_download"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/imageView9"
+                android:src="@drawable/pdf"
+                android:layout_centerVertical="true"
+                android:layout_centerHorizontal="true" />
+
+            <com.ayz4sci.androidfactory.DownloadProgressView
+                android:layout_below="@+id/imageView9"
+                android:id="@+id/downloadProgressView"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="10dp"
+                android:layout_marginTop="10dp"
+                android:orientation="horizontal" />
+        </RelativeLayout>
+    </LinearLayout>
+</android.support.v4.widget.SwipeRefreshLayout>
