--- a/app/src/main/res/layout/fragment_content_tertanda.xml
+++ b/app/src/main/res/layout/fragment_content_tertanda.xml
@@ -10,8 +10,7 @@
 
         android:layout_width="match_parent"
         android:layout_height="@dimen/space_40"
-        android:background="@color/navy"
-        android:layout_marginTop="@dimen/space_10">
+        android:background="@color/navy">
 
         <ui.CustomtextView
             font:name = "GOTHAM_BOLD"
