--- a/app/src/main/res/layout/fragment_disposisi_permohonan.xml
+++ b/app/src/main/res/layout/fragment_disposisi_permohonan.xml
@@ -85,6 +85,7 @@
         <View
             android:background="@color/black"
             android:layout_width="match_parent"
+            android:layout_margin="@dimen/space_5"
             android:layout_height="1dp"/>
 
         <android.support.v7.widget.RecyclerView
