--- a/app/src/main/res/layout/row_bbs_semua_pesanan.xml
+++ b/app/src/main/res/layout/row_bbs_semua_pesanan.xml
@@ -76,34 +76,6 @@
                     android:layout_alignParentStart="true" />
 
                 <ui.CustomtextView
-                    font:name="GOTHAM_LIGHT"
-                    android:id="@+id/lbl_Isi"
-                    android:textSize="@dimen/space_12"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:maxLines="1"
-                    android:layout_below="@+id/lbl_Judul"
-                    android:layout_marginTop="@dimen/space_3"
-                    android:layout_marginLeft="@dimen/space_7"
-                    android:layout_alignParentLeft="true"
-                    android:layout_alignParentStart="true" />
-
-                <ui.CustomtextView
-                    font:name="GOTHAM_LIGHTITALIC"
-                    android:id="@+id/lbl_attach1"
-                    android:textSize="@dimen/space_12"
-                    android:text="Attachments :"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:maxLines="1"
-                    android:textStyle="italic"
-                    android:layout_below="@+id/lbl_Isi"
-                    android:layout_marginTop="@dimen/space_7"
-                    android:layout_marginLeft="@dimen/space_7"
-                    android:layout_alignParentLeft="true"
-                    android:layout_alignParentStart="true" />
-
-                <ui.CustomtextView
                     font:name="GOTHAM_LIGHTITALIC"
                     android:id="@+id/lbl_attach"
                     android:textSize="@dimen/space_12"
@@ -147,6 +119,48 @@
                     android:layout_marginBottom="@dimen/space_7"
                     android:src="@drawable/pdf" />
 
+                <RelativeLayout
+                    android:id="@+id/layout_dokumen"
+                    android:background="@drawable/btn_shape_all_white"
+                    android:layout_width="40dp"
+                    android:layout_marginBottom="@dimen/space_10"
+                    android:layout_marginLeft="@dimen/space_14"
+                    android:layout_marginRight="@dimen/space_14"
+                    android:layout_height="@dimen/space_30"
+                    android:layout_marginTop="@dimen/space_10"
+                    android:layout_alignParentRight="true"
+                    android:layout_alignParentEnd="true"
+                    android:layout_toRightOf="@+id/lbl_attach1"
+                    android:layout_toEndOf="@+id/lbl_attach1"
+                    android:layout_below="@+id/lbl_Judul">
+
+                    <ui.CustomtextView
+                        android:layout_marginLeft="@dimen/space_10"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:gravity="center"
+                        android:text="Lihat Dokumen"
+                        android:textColor="@color/colorSearch"
+                        android:textSize="@dimen/space_14"
+                        font:name="GOTHAM_BLACK" />
+                </RelativeLayout>
+
+                <ui.CustomtextView
+                    font:name="GOTHAM_LIGHTITALIC"
+                    android:id="@+id/lbl_attach1"
+                    android:textSize="@dimen/space_12"
+                    android:text="Attachments :  "
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:gravity="fill_vertical"
+                    android:maxLines="1"
+                    android:textStyle="italic"
+                    android:layout_below="@+id/lbl_Judul"
+                    android:layout_alignBottom="@+id/layout_dokumen"
+                    android:layout_alignLeft="@+id/lbl_Judul"
+                    android:layout_alignStart="@+id/lbl_Judul"
+                    android:layout_alignTop="@+id/layout_dokumen" />
+
 
             </RelativeLayout>
 
@@ -175,7 +189,7 @@
         <RelativeLayout
             android:drawableLeft="@drawable/download24"
             android:id="@+id/btnDownload"
-            android:layout_width="115dp"
+            android:layout_width="120dp"
             android:layout_height="match_parent"
             android:background="@drawable/btn_shape_all_blue"
 
@@ -188,24 +202,23 @@
             android:layout_alignParentEnd="true"
             android:layout_marginBottom="@dimen/space_5"
             android:layout_marginRight="@dimen/space_10" >
-            <ImageView
-                android:src="@drawable/downloadsave32"
-                android:layout_width="@dimen/space_25"
-                android:layout_height="@dimen/space_25"
-                android:layout_marginRight="@dimen/space_3" />
+
 
             <ui.CustomtextView
+                android:layout_marginLeft="@dimen/space_10"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:gravity="center"
-                android:text="lihat dokumen"
+                android:text="EDIT BERITA"
                 android:textColor="#ffffff"
                 android:textSize="@dimen/space_10"
-                font:name="GOTHAM_BLACK"
+                font:name="GOTHAM_BLACK" />
 
-                android:layout_alignParentBottom="true"
+            <ImageView
                 android:layout_alignParentRight="true"
-                android:layout_alignParentEnd="true" />
+                android:src="@drawable/edit"
+                android:layout_width="@dimen/space_25"
+                android:layout_height="@dimen/space_25"/>
         </RelativeLayout>
 
         <ImageView
