--- a/app/src/main/res/layout/row_disposisi_riwayat.xml
+++ b/app/src/main/res/layout/row_disposisi_riwayat.xml
@@ -11,7 +11,7 @@
     <LinearLayout
         android:orientation="horizontal"
         android:layout_width="match_parent"
-        android:layout_height="@dimen/space_100"
+        android:layout_height="110dp"
         android:layout_margin="@dimen/space_5">
 
         <RelativeLayout
@@ -148,7 +148,7 @@
                 android:layout_below="@+id/layout_attachment"
                 android:layout_alignRight="@+id/layout_attachment"
                 android:layout_alignEnd="@+id/layout_attachment"
-                android:layout_marginTop="@dimen/space_3">
+                android:layout_marginTop="@dimen/space_7">
                 <ImageView
                     android:src="@drawable/downloadsave32"
                     android:tint="@color/colorAccept"
