--- a/app/src/main/res/layout/row_bbs_daftar_pesanan.xml
+++ b/app/src/main/res/layout/row_bbs_daftar_pesanan.xml
@@ -95,23 +95,13 @@
                 android:layout_marginRight="@dimen/space_10"
                 android:layout_marginTop="@dimen/space_5">
 
-                <ui.CustomtextView
-                    font:name="GOTHAM_BOLD"
-                    android:id="@+id/lbl_Judul1"
-                    android:text=""
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:maxLines="1"
-                    android:layout_marginTop="@dimen/space_7"
-                    android:layout_marginLeft="@dimen/space_7"
-                    android:layout_alignParentLeft="true"
-                    android:layout_alignParentStart="true" />
+
 
                 <ui.CustomtextView
                     font:name="GOTHAM_LIGHTITALIC"
                     android:id="@+id/lbl_attach"
                     android:textSize="@dimen/space_12"
-                    android:text="Attachemnt asdas asdas"
+                    android:text=""
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:textStyle="italic"
@@ -128,7 +118,7 @@
                     android:id="@+id/lbl_size"
                     android:textSize="@dimen/space_12"
                     android:layout_marginLeft="@dimen/space_5"
-                    android:text="Attachemnt asdas asdas asd asd"
+                    android:text=""
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:textStyle="italic"
@@ -163,8 +153,7 @@
                     android:layout_alignParentRight="true"
                     android:layout_alignParentEnd="true"
                     android:layout_toRightOf="@+id/lbl_attach1"
-                    android:layout_toEndOf="@+id/lbl_attach1"
-                    android:layout_below="@+id/lbl_Judul1">
+                    android:layout_toEndOf="@+id/lbl_attach1">
 
                     <ui.CustomtextView
                         android:layout_marginLeft="@dimen/space_10"
@@ -187,10 +176,8 @@
                     android:gravity="fill_vertical"
                     android:maxLines="1"
                     android:textStyle="italic"
-                    android:layout_below="@+id/lbl_Judul1"
+                    android:layout_marginLeft="@dimen/space_14"
                     android:layout_alignBottom="@+id/layout_dokumen"
-                    android:layout_alignLeft="@+id/lbl_Judul1"
-                    android:layout_alignStart="@+id/lbl_Judul1"
                     android:layout_alignTop="@+id/layout_dokumen" />
 
 
