--- a/app/src/main/res/layout/activity_pdfview_deafult.xml
+++ b/app/src/main/res/layout/activity_pdfview_deafult.xml
@@ -27,6 +27,13 @@
             android:layout_marginTop="@dimen/space_10"
             android:layout_margin="@dimen/space_10">
 
+            <ImageView
+                android:visibility="gone"
+                android:id="@+id/imgView"
+                android:layout_margin="@dimen/space_10"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent" />
+
             <com.github.barteksc.pdfviewer.PDFView
                 android:id="@+id/pdfView"
                 android:layout_width="match_parent"
