--- a/app/src/main/res/layout/row_disposisi_riwayat.xml
+++ b/app/src/main/res/layout/row_disposisi_riwayat.xml
@@ -11,12 +11,12 @@
     <LinearLayout
         android:orientation="horizontal"
         android:layout_width="match_parent"
-        android:layout_height="110dp"
+        android:layout_height="wrap_content"
         android:layout_margin="@dimen/space_5">
 
         <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:layout_weight="4">
 
             <ui.CustomtextView
@@ -35,13 +35,15 @@
                 android:text="10:46 AM"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:paddingRight="@dimen/space_5"
                 android:gravity="right"
                 android:layout_alignTop="@+id/text_judul_surat"
                 android:layout_alignParentRight="true"
                 android:layout_alignParentEnd="true"
                 android:layout_marginRight="@dimen/space_5" />
 
-            <RelativeLayout
+            <LinearLayout
+                android:orientation="horizontal"
                 android:id="@+id/layout_attachment"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -53,86 +55,113 @@
                 android:layout_marginRight="@dimen/space_5"
                 android:layout_marginTop="@dimen/space_5">
 
-                <ui.CustomtextView
-                    font:name = "GOTHAM_LIGHTITALIC"
-                    android:id="@+id/lbl_attach"
-                    android:text="Attachemnt"
+                <LinearLayout
+                    android:orientation="vertical"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:textSize="@dimen/space_12"
-                    android:maxLines="1"
-                    android:textStyle="italic"
-                    android:layout_alignTop="@+id/imageView6"
-                    android:layout_toRightOf="@+id/imageView6"
-                    android:layout_toEndOf="@+id/imageView6"
-                    android:layout_marginRight="@dimen/space_45"
-                    android:layout_marginLeft="@dimen/space_3"/>
+                    android:layout_weight="1">
 
-                <ui.CustomtextView
-                    font:name = "GOTHAM_LIGHTITALIC"
+                    <ui.CustomtextView
+                        android:layout_marginTop="@dimen/space_10"
+                        android:layout_marginBottom="@dimen/space_10"
+                        font:name="GOTHAM_BOLD"
+                        android:id="@+id/lbl_Judul"
+                        android:text="Tutorial Backup Hapus Email"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:maxLines="1"
+                        android:layout_marginLeft="@dimen/space_14"
+                        android:layout_alignParentTop="true"
+                        android:layout_alignParentRight="true"
+                        android:layout_alignParentEnd="true" />
 
-                    android:textSize="@dimen/space_12"                    android:id="@+id/lbl_size"
-                    android:text="Attachemnt asdas asdas"
+                    <RelativeLayout
+                        android:id="@+id/layout_attachment1"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:background="@color/colorListItem"
+                        android:layout_below="@+id/text_Date"
+                        android:layout_alignRight="@+id/text_time"
+                        android:layout_alignEnd="@+id/text_time"
+                        android:layout_marginLeft="@dimen/space_5"
+                        android:layout_marginRight="@dimen/space_5">
+
+                        <ui.CustomtextView
+                            font:name = "GOTHAM_LIGHTITALIC"
+                            android:id="@+id/lbl_label"
+                            android:text="Attachemnts "
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:textSize="@dimen/space_12"
+                            android:maxLines="1"
+                            android:textStyle="italic"
+                            android:layout_marginRight="@dimen/space_45"
+                            android:layout_marginLeft="@dimen/space_7"/>
+
+                        <ui.CustomtextView
+                            font:name = "GOTHAM_LIGHTITALIC"
+                            android:id="@+id/lbl_attach"
+                            android:text="Attachemnt"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:textSize="@dimen/space_12"
+                            android:maxLines="1"
+                            android:textStyle="italic"
+                            android:layout_alignTop="@+id/imageView6"
+                            android:layout_toRightOf="@+id/imageView6"
+                            android:layout_toEndOf="@+id/imageView6"
+                            android:layout_marginRight="@dimen/space_45"
+                            android:layout_marginLeft="@dimen/space_3"/>
+
+                        <ui.CustomtextView
+                            font:name = "GOTHAM_LIGHTITALIC"
+                            android:id="@+id/lbl_size"
+                            android:textSize="@dimen/space_12"
+                            android:text="Attachemnt asdas asdas"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_below="@+id/lbl_attach"
+                            android:maxLines="1"
+                            android:layout_alignBottom="@+id/imageView6"
+                            android:layout_toRightOf="@+id/imageView6"
+                            android:layout_toEndOf="@+id/imageView6"
+                            android:layout_marginRight="@dimen/space_45"
+                            android:layout_marginLeft="@dimen/space_3"
+                            android:textStyle="italic" />
+
+                        <ImageView
+                            android:layout_width="@dimen/space_25"
+                            android:layout_height="@dimen/space_30"
+                            android:id="@+id/imageView6"
+                            android:layout_alignParentTop="true"
+                            android:layout_alignParentLeft="true"
+                            android:layout_alignParentStart="true"
+                            android:src="@drawable/pdf"
+                            android:layout_marginLeft="@dimen/space_7"
+                            android:layout_marginTop="@dimen/space_16"
+                            android:layout_marginBottom="@dimen/space_10" />
+
+                    </RelativeLayout>
+                </LinearLayout>
+
+                <RelativeLayout
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_below="@+id/lbl_attach"
-                    android:maxLines="1"
-                    android:layout_alignBottom="@+id/imageView6"
-                    android:layout_toRightOf="@+id/imageView6"
-                    android:layout_toEndOf="@+id/imageView6"
-                    android:layout_marginRight="@dimen/space_45"
-                    android:layout_marginLeft="@dimen/space_3"
-                    android:textStyle="italic" />
-
-                <ImageView
-                    android:layout_width="@dimen/space_25"
-                    android:layout_height="@dimen/space_30"
-                    android:id="@+id/imageView6"
-                    android:layout_alignParentTop="true"
-                    android:layout_alignParentLeft="true"
-                    android:layout_alignParentStart="true"
-                    android:src="@drawable/pdf"
-                    android:layout_marginLeft="@dimen/space_7"
-                    android:layout_marginTop="@dimen/space_10"
-                    android:layout_marginBottom="@dimen/space_10" />
-
-                <ImageView
-                    android:visibility="gone"
-                    android:layout_width="@dimen/space_35"
-                    android:layout_height="@dimen/space_35"
-                    android:id="@+id/imageView15"
-                    android:layout_alignTop="@+id/lbl_attach"
-                    android:layout_alignParentRight="true"
-                    android:layout_alignParentEnd="true"
-                    android:src="@drawable/circle_kosong"
-                    android:layout_marginRight="@dimen/space_5" />
-
-
-            </RelativeLayout>
-
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_toLeftOf="@+id/btnDownload"
-                android:layout_toStartOf="@+id/btnDownload"
-                android:layout_alignParentBottom="true"
-                android:layout_alignTop="@+id/btnDownload">
-
-                <ImageView
-                    android:id="@+id/imageView5"
-                    android:src="@drawable/ball_green"
-                    android:layout_width="@dimen/space_25"
-                    android:layout_height="@dimen/space_30" />
-
-                <ui.CustomtextView
-                    font:name = "GOTHAM_MEDIUM"
-                    android:text="disetujui"
-                    android:id="@+id/text_status"
-                    android:layout_width="match_parent"
-                    android:layout_height="@dimen/space_30"
-                    android:gravity="fill_vertical" />
+                    android:layout_height="match_parent"
+                    android:gravity="center"
+                    android:layout_weight="9">
+                    <ImageView
+                        android:visibility="gone"
+                        android:layout_width="@dimen/space_25"
+                        android:layout_height="@dimen/space_25"
+                        android:id="@+id/imageView15"
+                        android:layout_alignParentRight="true"
+                        android:layout_alignParentEnd="true"
+                        android:src="@drawable/circle_kosong"
+                        android:layout_marginTop="@dimen/space_3"
+                        android:layout_marginRight="@dimen/space_10" />
+                </RelativeLayout>
             </LinearLayout>
+
 
             <RelativeLayout
                 android:drawableLeft="@drawable/download24"
@@ -168,6 +197,28 @@
                     android:layout_alignParentRight="true"
                     android:layout_alignParentEnd="true" />
             </RelativeLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_alignTop="@+id/btnDownload"
+                android:layout_alignLeft="@+id/layout_attachment"
+                android:layout_alignStart="@+id/layout_attachment">
+
+                <ImageView
+                    android:id="@+id/imageView5"
+                    android:src="@drawable/ball_green"
+                    android:layout_width="@dimen/space_18"
+                    android:layout_height="@dimen/space_30" />
+
+                <ui.CustomtextView
+                    font:name = "GOTHAM_MEDIUM"
+                    android:text="disetujui"
+                    android:id="@+id/text_status"
+                    android:layout_width="match_parent"
+                    android:layout_height="@dimen/space_30"
+                    android:gravity="fill_vertical" />
+            </LinearLayout>
 
         </RelativeLayout>
 
